add some usecases to the notebook, some fixes

--- a/examples/notebooks/conn_gen_sample_notebook.ipynb
+++ b/examples/notebooks/conn_gen_sample_notebook.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,17 +25,94 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Used the persistant vectorstore - fdp-amts-gtfs\n",
+    "\n",
+    "query = \"get all stops\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "base_url = \"http://localhost:8001/\"\n",
+    "connector_file = \"fdp-amts-gtfs-static-connector.yaml\"\n",
+    "config_file = \"../persistent_vectorstore_config.yaml\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "# Used the persistant vectorstore\n",
+    "build_connector.generate(base_url,\n",
+    "                            config_file,\n",
+    "                            None,\n",
+    "                            connector_file,\n",
+    "                            query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pprint\n",
+    "import pandas as pd\n",
+    "# Run the connector and return a pandas data frame\n",
+    "out = exec.run_from_spec_file(connector_file)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
+    "df = pd.json_normalize(out, 'data')\n",
+    "filtered_df = df.query('stop_id == 100')\n",
+    "pprint.pprint(filtered_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"get shipment of customer with id 501220267\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# fdp-czech-plant\n",
     "base_url = \"http://localhost:8000/\"\n",
-    "connector_file = \"notebook-connector.yaml\"\n",
-    "query = \"get all stops from fdp\"\n",
-    "config_file = \"../persistent_vectorstore_config.yaml\"\n",
+    "connector_file = \"fdp-czech-plant-connector.yaml\"\n",
+    "config_file = \"../persistent_vectorstore_config.yaml\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "build_connector.generate(base_url,\n",
     "                            config_file,\n",
@@ -51,8 +128,11 @@
    "outputs": [],
    "source": [
     "# Run the connector and return a pandas data frame\n",
+    "import pprint\n",
     "out = exec.run_from_spec_file(connector_file)\n",
-    "print(out)"
+    "df = pd.json_normalize(out, 'data')\n",
+    "filtered_df = df.query('WK_0 == 7')\n",
+    "pprint.pprint(filtered_df)"
    ]
   }
  ],
