--- a/examples/notebooks/load_vs_sample_notebook.ipynb
+++ b/examples/notebooks/load_vs_sample_notebook.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,26 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<acg.retrieval.vectorstore.LocalVS at 0x1f037e58da0>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Make sure the following paths are correct\n",
     "config_file = \"../persistent_vectorstore_config.yaml\"\n",
     "conf = config.import_config(config_file)\n",
     "\n",
-    "specs_files = [ \"../../openapi-specs/fdp-amts-gtfs-static.yaml\"]\n",
+    "specs_files = [ \"../../openapi-specs/fdp-amts-gtfs-static.yaml\", \"../../openapi-specs/fdp-czech-plant.yaml\"]\n",
     "\n",
     "# Load into persistant store to keep APIs\n",
     "vectorstore_loader.add_specs(conf, specs_files)"
